Ajout complets des filtres

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -38,7 +38,7 @@
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
 		<div class="filters">
-			<input class="toHide" type="checkbox" id="checked1">
+			<!--<input class="toHide" type="checkbox" id="checked1">
             <label for="checked1">
 			    <span class="filter__border border__one">Tous</span>
 			</label>
@@ -53,7 +53,7 @@
 			<input class="toHide" type="checkbox" id="checked4">
             <label for="checked4">
 			    <span class="filter__border border__four">Hotels & restaurants</span>
-			</label>
+			</label>-->
 		</div>
 		<div class="gallery">
 			<!--<figure>
