Script unpeu modifié

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,11 +51,12 @@
 		<div class="categorie--groupe">
 			<label for="categorie">Catégorie</label>
 			<select name="categorie" id="categorie">
-				<option value="1"></option>
+				<!--<option value="1"></option>
 				<option value="2">Objets</option>
 				<option value="3">Appartements</option>
-				<option value="4">Hôtels & restaurants</option>
+				<option value="4">Hôtels & restaurants</option>-->
 			</select>
+			<i class="fa-solid fa-chevron-down"></i>
 		</div>
 		<div class="border__decorative"></div>
 		<a class="button__validate">Valider</a>
